# probabilistic-load-forecast-project

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt  todelete.py
.github/workflows/: pylint.yml
apps/api/: main.py
apps/ui/: Home.py  Load_data.py  Load_forecast.py  Weather_data.py  client.py
notebooks/eda/: data_preperation.ipynb  feature_engineering.ipynb  load_forecast_eda.html  load_forecast_eda.ipynb
notebooks/modelling/: bayesian_lstm.ipynb  lstm.ipynb  prophet.ipynb
notebooks/performance/: model_comparison.ipynb  model_shap.ipynb  profiling.ipynb
scripts/: import_load_daily.ps1  import_weather_forecast_daily.ps1
src/probabilistic_load_forecast/: __main__.py  cli.py  config.py
src/probabilistic_load_forecast/adapters/: __init__.py  country_code.py  utils.py
src/probabilistic_load_forecast/adapters/cds/: __init__.py  api_client.py  file_repository.py  mapper.py  provider.py  repository.py
src/probabilistic_load_forecast/adapters/db/: __init__.py  repository.py
src/probabilistic_load_forecast/adapters/ecmwf/: api_client.py  mapper.py  provider.py
src/probabilistic_load_forecast/adapters/ecwmf/: api_client.py  mapper.py  provider.py
src/probabilistic_load_forecast/adapters/entsoe/: __init__.py  api_client.py  fetcher.py  mapper.py  provider.py  repository.py
src/probabilistic_load_forecast/application/: ports.py
src/probabilistic_load_forecast/application/mappers/: __init__.py  era5_series.py  load_series.py
src/probabilistic_load_forecast/application/services/: __init__.py  cds_services.py  ecwmf_services.py  entsoe_services.py  fetch_and_store_measurements.py  forecast_services.py
src/probabilistic_load_forecast/application/use_cases/: __init__.py  fetch_and_store_measurements.py
src/probabilistic_load_forecast/domain/: entities.py  exceptions.py  model.py
src/probabilistic_load_forecast/infrastructure/: api_client.py  utils.py
src/probabilistic_load_forecast/infrastructure/cds/: api_client.py  mapper.py  repository.py
src/probabilistic_load_forecast/infrastructure/db/: repository.py
src/probabilistic_load_forecast/infrastructure/entsoe/: api_client.py  fetcher.py  mapper.py  repository.py
src/probabilistic_load_forecast/repository/: fetcher.py  mapper.py  repository.py
tests/adapters/cds/: test_provider.py
tests/adapters/db/: test_repository.py
tests/adapters/ecmwf/: test_api_client.py  test_ecmwf_mapper.py
tests/adapters/ecwmf/: test_api_client.py  test_mapper.py
tests/adapters/entsoe/: test_mapper.py  test_utils.py
tests/application/: test_ecwmf_service.py  test_get_actual_load_data.py  test_get_multiple_era5_dataframes.py  test_usecases.py
tests/fixtures/: 2026-03-24.grib2.47d85.idx  2026-03-25.grib2.47d85.idx  sample_load.xml
tests/infrastructure/cds/: test_repository.py
tests/infrastructure/entsoe/: test_mapper.py  test_utils.py
tests/repository/: test_mapper.py
thesis/: Literatur.bib  MA_Hausensteiner.tex  twbook.cls
