[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic_load_forecast"
requires-python = ">=3.11,<3.13"
version = "0.0.1"
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "cdsapi>=0.7.6",
    "dask>=2025.9.1",
    "dotenv>=0.9.9",
    "geopandas>=1.1.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "netcdf4>=1.7.2",
    "psycopg[binary]>=3.2.10",
    "pycountry>=24.6.1",
    "regionmask>=0.13.0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "xarray>=2025.9.0",
]

[project.scripts]
plf = "probabilistic_load_forecast.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "cartopy>=0.25.0",
    "ipykernel>=6.30.1",
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]
