[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic_load_forecast"
requires-python = ">=3.11,<3.13"
version = "0.0.1"
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "blitz-bayesian-pytorch>=0.2.8",
    "cdsapi>=0.7.6",
    "dask>=2025.9.1",
    "dotenv>=0.9.9",
    "geopandas>=1.1.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.8.1",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "optuna>=4.6.0",
    "plotly>=6.3.1",
    "prophet>=1.2.1",
    "psycopg[binary]>=3.2.10",
    "pyarrow>=22.0.0",
    "pycountry>=24.6.1",
    "regionmask>=0.13.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "shap>=0.50.0",
    "statsmodels>=0.14.5",
    "wheel>=0.45.1",
    "xarray>=2025.9.0",
]

[project.scripts]
plf = "probabilistic_load_forecast.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black[jupyter]>=25.9.0",
    "cartopy>=0.25.0",
    "ipykernel>=6.30.1",
    "notebook>=7.4.7",
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.0",
  "torchvision>=0.20.0",
]

cu128 = [
  "torch>=2.5.0",
  "torchvision>=0.20.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
